Finished switching out alacritty for foot.

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -85,7 +85,7 @@ bind=SUPERSHIFT,Q,exit,
 
 bind=SUPERSHIFT,RETURN,exec,foot
 
-bind=SUPER,P,exec,alacritty --title Btl -e /home/thomas/prog/btl/build/btl
+bind=SUPER,P,exec,foot --title Btl -e /home/thomas/prog/btl/build/btl
 bind=SUPERCTRL,S,exec,grim
 
 
