--- a/hyprland.conf
+++ b/hyprland.conf
@@ -27,7 +27,7 @@ general {
 
     apply_sens_to_raw=0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
 
-    damage_tracking=full # leave it on full unless you hate your GPU and want to make it suffer
+    #damage_tracking=full # leave it on full unless you hate your GPU and want to make it suffer
 }
 
 decoration {
@@ -85,7 +85,7 @@ bind=SUPERSHIFT,Q,exit,
 
 bind=SUPERSHIFT,RETURN,exec,foot
 
-bind=SUPER,P,exec,foot --title Btl -e /home/thomas/prog/btl/build/btl
+bind=SUPER,P,exec,foot --title Btl -e ~/prog/btl/build/btl
 bind=SUPERCTRL,S,exec,grim
 
 
