Removed wallpapers switching due to segfaults in hyprpaper.

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -1,4 +1,7 @@
+# Auto starts
 exec-once=hyprpaper
+exec-once=firefox 
+exec-once=signal-desktop --enable-features=UseOzonePlatform --ozone-platform=wayland
 
 input {
     kb_layout=us
@@ -63,8 +66,10 @@ dwindle {
 }
 
 misc {
-disable_hyprland_logo=1
-disable_splash_rendering=1
+	disable_hyprland_logo=1
+	disable_splash_rendering=1
+	enable_swallow=1
+	swallow_regex=^(foot)$
 }
 
 gestures {
@@ -81,6 +86,11 @@ windowrule=size 200 1080,title:^(Btl)$
 windowrule=float,^(hl2_linux)$
 windowrule=fullscreen,^(hl2_linux)$
 
+# Rules to start apps in certain workspaces
+windowrule=workspace 1 silent,class:^(firefox)$
+
+windowrule=workspace 8 silent,class:^(signal)$
+
 bind=SUPERSHIFT,Q,exit,
 
 bind=SUPERSHIFT,RETURN,exec,foot
@@ -90,9 +100,8 @@ bind=SUPERCTRL,S,exec,grim
 
 
 bind=SUPER,Q,killactive
-bind=SUPER,F,fullscreen, 0
-bind=SUPERSHIFT,F,togglefloating,
-
+bind=SUPERSHIFT,F,fullscreen, 0
+bind=SUPER,F,togglefloating,
 
 
 #Keyboard layouts
@@ -117,21 +126,15 @@ bind=SUPERSHIFT,K,movewindow,r
 bind=SUPERSHIFT,I,movewindow,u
 bind=SUPERSHIFT,M,movewindow,d
 
-bind=SUPER,1,exec,~/.config/hypr/wp1.sh
-bind=SUPER,2,exec,~/.config/hypr/wp2.sh
-bind=SUPER,3,exec,~/.config/hypr/wp3.sh
-bind=SUPER,4,exec,~/.config/hypr/wp4.sh
-bind=SUPER,5,exec,~/.config/hypr/wp5.sh
-bind=SUPER,6,exec,~/.config/hypr/wp6.sh
-bind=SUPER,7,exec,~/.config/hypr/wp7.sh
-bind=SUPER,8,exec,~/.config/hypr/wp8.sh
-bind=SUPER,9,exec,~/.config/hypr/wp9.sh
-
-
-bind=SUPER,A,workspace,name:a
-bind=SUPER,S,workspace,name:s
-bind=SUPER,D,workspace,name:d
-
+bind=SUPER,1,workspace,1
+bind=SUPER,2,workspace,2
+bind=SUPER,3,workspace,3
+bind=SUPER,4,workspace,4
+bind=SUPER,5,workspace,5
+bind=SUPER,6,workspace,6
+bind=SUPER,7,workspace,7
+bind=SUPER,8,workspace,8
+bind=SUPER,9,workspace,9
 
 bind=SUPERSHIFT,1,movetoworkspacesilent,1
 bind=SUPERSHIFT,2,movetoworkspacesilent,2
@@ -157,3 +160,6 @@ bind=SUPERCONTROL,0,movetoworkspace,10
 
 bind=SUPER,mouse_down,workspace,e+1
 bind=SUPER,mouse_up,workspace,e-1
+
+bindm=SUPER,mouse:272,movewindow
+bindm=SUPER,mouse:273,resizewindow
